--- a/src/styles/Signup.module.css
+++ b/src/styles/Signup.module.css
@@ -1,15 +1,16 @@
 .container {
   display: flex;
   flex-direction: column;
-  margin: 100px auto;
   justify-content: center;
   align-items: center;
+  padding: 20px;
   border: 1px solid black;
   border-radius: 4px;
   max-width: 300px;
 }
 
 .container span {
+  font-weight: 600;
   margin: 10px 0;
 }
 .sign_form {
